@@ -23,6 +23,11 @@
 								<minitems>0</minitems>
 								<autoSizeMax>10</autoSizeMax>
 								<show_thumbs>0</show_thumbs>
+                                <wizards>
+                                    <suggest>
+                                        <type>suggest</type>
+                                    </suggest>
+                                </wizards>
 							</config>
 						</TCEforms>
 					</singleRecords>
@@ -113,6 +118,11 @@
 							<maxitems>22</maxitems>
 							<minitems>0</minitems>
 							<show_thumbs>1</show_thumbs>
+                            <wizards>
+                                <suggest>
+                                    <type>suggest</type>
+                                </suggest>
+                            </wizards>
 						</config>
 					  	</TCEforms>
 					</pages>
