@@ -3,6 +3,7 @@
 	* Updated documentation for #M11276 and #M18242
 	* FIX issue #M12776: Incorrect sorting with umlauts and whitespace
 	* FIX issue #M18558: Compatibility with TYPO3 4.6+
+	* ADD feature #36511: Use TCA suggest wizard for single selection and starting point
 
 2012-05-30 Lorenz Ulrich <lorenz.ulrich@visol.ch>
 	* FIX issue #M18489: Fatal error using non existing int() function
